# processa-pedido

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: app-integration.yml  app-tests.yml  k8s-lint.yml  terraform-ci.yml
config/: settings.py  settings_test.py  urls.py
docs/: respostas.md
k8s/: db-deployment.yaml  db-pvc.yaml  db-service.yaml  grafana-dashboard-json-configmap.yaml  grafana-dashboard-provider-configmap.yaml  grafana-datasource-configmap.yaml  grafana-deployment.yaml  grafana-service.yaml  loja-deployment.yaml  loja-service.yaml  painel-deployment.yaml  painel-service.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-service.yaml  rabbitmq-deployment.yaml  rabbitmq-service.yaml  redis-deployment.yaml  redis-service.yaml  worker-deployment.yaml  worker-service.yaml
loja/: tests.py  views.py
painel/: tests.py  views.py
pedidos/: tests.py
pedidos/management/commands/: run_worker.py
terraform/: .terraform.tfstate.lock.info  cluster.tf  image.tf  manifests.tf  outputs.tf  variables.tf  versions.tf
