[project]
name = "processador-pedidos"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0.6",
    "djangorestframework>=3.15.2",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.9",
    "gunicorn>=22.0.0",
    "django-redis>=5.4.0",
    "django-prometheus>=2.3.1",
    "prometheus-client>=0.20.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-django>=4.8.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings_test"
python_files = ["test_*.py", "tests.py"]
